<resources>
    <string name="app_name">Shows</string>
    <string name="email">Email</string>
    <string name="email_exists_error">Email already exists.</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="login">Login</string>
    <string name="underLoginText">In order to continue please log in.</string>
    <string name="loginTitle">Login</string>
    <string name="welcomeText">Welcome</string>
    <string name="usernameWelcome">Welcome, %1$s!</string>
    <string name="fab_content_desc">👁</string>
    <string name="noShowsText">Your shows are not showing. Get it?</string>
    <string name="back_button">back button</string>
    <string name="show_name">Show name</string>
    <string name="showName">showName</string>
    <string name="show_description">showDescription</string>
    <string name="show_image">showImage</string>
    <string name="write_a_review">Write a review</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="reviews">Reviews</string>
    <string name="profile_picture">Profile picture</string>
    <string name="rating">rating</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="welcome_message">Welcome</string>
    <string name="remember_me">Remember me</string>
    <string name="logout">Logout</string>
    <string name="logout_confirmation_title">Logout confirmation</string>
    <string name="logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="user_email">user_email</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="default_email">default@email.com</string>
    <string name="change_photo">Change photo</string>
    <string name="change_photo_dialog_title">Select Image</string>
    <string name="change_photo_dialog_body">Please select one of the sources for your new photo</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="ratings_average">%d ratings, %.2f average</string>
    <string name="provide_rating_error">Please provide a rating.</string>
    <string name="remember_me_checkbox">rememberMeCheckbox</string>
    <string name="register">Register</string>
    <string name="registration_successful">Registration\nSuccessful!</string>
    <string name="registration_failed">Registration failed!</string>
    <string name="repeat_password">Repeat password</string>
    <string name="invalid_login">Invalid login credentials. Please try again.</string>
    <string name="try_again">Try again</string>
    <string name="auth_error">Authentication data missing or invalid. Please log in again.</string>
    <string name="regex_pattern">[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+.[A-Za-z]{2,4}</string>


</resources>