<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="40sp"
        android:padding="16dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/showsRecycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appTitle"
        android:visibility="visible"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/item_review"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/emptyStateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/fab_content_desc"
        app:fabSize="normal"
        app:layout_anchor="@id/showsRecycler"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/baseline_visibility_20"/>

    <ImageView
        android:id="@+id/noShowsIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_shows_empty_state"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/noShowsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/noShowsIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/noShowsText"
        android:textSize="18sp"
        android:visibility="gone"
        />

</RelativeLayout>
