<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/profilePhoto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50"
        android:src="@drawable/ic_profile_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="24dp"
        />

    <TextView
        android:id="@+id/emailTextProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_email"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold"
        android:textSize="28sp"
        android:paddingTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profilePhoto"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/changePhotoButton"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/change_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextProfile"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/LogoutButton"
        style="@style/PurpleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/logout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/changePhotoButton"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.Full"/>

</androidx.constraintlayout.widget.ConstraintLayout>
